--- a/sv-tora/public/css/app.css
+++ b/sv-tora/public/css/app.css
@@ -2913,6 +2913,13 @@ header .profile {
 
 }
 
+.form-error {
+    padding: 0.75rem;
+    background-color: rgba(178, 58, 72, 0.8);
+    border: 1px solid var(--error-light);
+}
+
+.form-container,
 .login-container,
 .registration-container {
     background: radial-gradient(circle at 100% 100%, var(--theme-color-3) 65%, var(--accent-color-1-dark));
@@ -2962,6 +2969,7 @@ header .profile {
     transform: scale(1.25);
 }
 
+.form-container h2,
 .login-container h2,
 .registration-container h2 {
     font-size: 2.5rem;
@@ -2969,10 +2977,7 @@ header .profile {
     text-shadow: 2px 2px 8px var(--text-shadow);
 }
 
-.registration-container h2 {
-    text-align: right;
-}
-
+.form-container .input-container,
 .login-container .input-container,
 .registration-container .input-container {
     margin-bottom: 2rem;
@@ -2988,6 +2993,7 @@ header .profile {
     margin-top: -1rem;
 }
 
+.form-container .secondary-button,
 .login-container .secondary-button,
 .registration-container .secondary-button {
     font-size: 0.8em;
@@ -4688,18 +4694,13 @@ textarea.incorrect {
     background: rgba(32, 191, 85, 0.6);
 }
 
-.notification .symbol {
+.message .notification .symbol {
     float: left;
 }
 
 .message .notification p {
-    float: right;
-    position: relative;
     display: inline-block;
     width: calc(100% - 4em);
-    margin: 0.5em 0;
-    font-size: 1em;
-    transition: 0.2s ease;
     opacity: 1;
     max-height: unset;
     padding-left: unset;
@@ -4708,7 +4709,7 @@ textarea.incorrect {
     overflow-y: unset;
 }
 
-.notification p:before {
+.message .notification p:before {
     content: '';
     position: absolute;
     width: 0.2em;
@@ -5205,281 +5206,303 @@ nav.nav .image-container img {
 */
 
 .notification {
-  position: fixed;
-  border: 1px solid var(--accent-color-1-dark);
-  height: 4.5em;
-  width: 4.5em;
-  background: rgba(61, 118, 225, 0.7);
-  box-shadow: 2px 2px 10px 3px black, 0 0 12px 1px var(--accent-color-1-dark) inset;
-  right: -6em;
-  bottom: 2em;
-  padding: 0.5em;
-  transition: width 0.75s ease 0.5s, height 0.5s ease 0s, background-color 1.25s ease, right 0.5s ease 1.25s;
-  overflow: hidden;
-  transform-origin: 50% 100%;
-}
-
-.darkmode .notification {
-  background: rgba(61, 118, 225, 0.4);
+    position: fixed;
+    height: 4.5em;
+    width: 4.5em;
+    right: -6em;
+    bottom: 2em;
+    padding: 0.5em;
+    transition: width 0.75s ease 0.5s, height 0.5s ease 0s, background-color 1.25s ease, right 0.5s ease 1.25s;
+    overflow: hidden;
+    transform-origin: 50% 100%;
+    z-index: 1001;
 }
 
 .notification.visible {
-  transition: width 0.75s ease 0.5s, height 0.5s ease 0s, background-color 1.25s ease, right 0.5s ease 0s;
-  right: 2em;
+    transition: width 0.75s ease 0.5s, height 0.5s ease 0s, background-color 1.25s ease, right 0.5s ease 0s;
+    right: 2em;
+}
+
+.notification.visible.success,
+.notification.visible.success:hover,
+.notification.visible.error,
+.notification.visible.error:hover {
+    height: 5em;
+    width: calc(100% - 4rem);
 }
 
 .notification.visible:hover {
-  height: 7em;
-  width: calc(100% - 4rem);
-  background: rgba(61, 118, 225, 0.9);
-  transition: width 0.75s ease 0s, height 0.5s ease 0.75s;
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
+    height: 7em;
+    width: calc(100% - 4rem);
+    background: rgba(61, 118, 225, 0.9);
+    transition: width 0.75s ease 0s, height 0.5s ease 0.75s;
+    -webkit-animation-play-state: paused;
+            animation-play-state: paused;
 }
 
 .notification.info,
 .notification.warning {
-  -webkit-animation: attention 2s ease 1s 3;
-          animation: attention 2s ease 1s 3;
+    -webkit-animation: attention 2s ease 1s 3;
+            animation: attention 2s ease 1s 3;
 }
 
 @-webkit-keyframes attention {
-  0% {
-    transform: translateY(0px) rotate(0deg);
-  }
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
 
-  5% {
-    transform: translateY(-30px) rotate(0deg);
-  }
+    5% {
+        transform: translateY(-30px) rotate(0deg);
+    }
 
-  20% {
-    transform: translateY(-30px) rotate(10deg);
-  }
+    20% {
+        transform: translateY(-30px) rotate(10deg);
+    }
 
-  25% {
-    transform: translateY(-30px) rotate(-10deg);
-  }
+    25% {
+        transform: translateY(-30px) rotate(-10deg);
+    }
 
-  30% {
-    transform: translateY(-30px) rotate(10deg);
-  }
+    30% {
+        transform: translateY(-30px) rotate(10deg);
+    }
 
-  35% {
-    transform: translateY(-30px) rotate(-10deg);
-  }
+    35% {
+        transform: translateY(-30px) rotate(-10deg);
+    }
 
-  40% {
-    transform: translateY(-30px) rotate(10deg);
-  }
+    40% {
+        transform: translateY(-30px) rotate(10deg);
+    }
 
-  55% {
-    transform: translateY(-30px) rotate(0deg);
-  }
+    55% {
+        transform: translateY(-30px) rotate(0deg);
+    }
 
-  60% {
-    transform: translateY(0px) rotate(0deg);
-  }
+    60% {
+        transform: translateY(0px) rotate(0deg);
+    }
 
-  100% {
-    transform: translateY(0px) rotate(0deg);
-  }
+    100% {
+        transform: translateY(0px) rotate(0deg);
+    }
 
 }
 
 @keyframes attention {
-  0% {
-    transform: translateY(0px) rotate(0deg);
-  }
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
 
-  5% {
-    transform: translateY(-30px) rotate(0deg);
-  }
+    5% {
+        transform: translateY(-30px) rotate(0deg);
+    }
 
-  20% {
-    transform: translateY(-30px) rotate(10deg);
-  }
+    20% {
+        transform: translateY(-30px) rotate(10deg);
+    }
 
-  25% {
-    transform: translateY(-30px) rotate(-10deg);
-  }
+    25% {
+        transform: translateY(-30px) rotate(-10deg);
+    }
 
-  30% {
-    transform: translateY(-30px) rotate(10deg);
-  }
+    30% {
+        transform: translateY(-30px) rotate(10deg);
+    }
 
-  35% {
-    transform: translateY(-30px) rotate(-10deg);
-  }
+    35% {
+        transform: translateY(-30px) rotate(-10deg);
+    }
 
-  40% {
-    transform: translateY(-30px) rotate(10deg);
-  }
+    40% {
+        transform: translateY(-30px) rotate(10deg);
+    }
 
-  55% {
-    transform: translateY(-30px) rotate(0deg);
-  }
+    55% {
+        transform: translateY(-30px) rotate(0deg);
+    }
 
-  60% {
-    transform: translateY(0px) rotate(0deg);
-  }
+    60% {
+        transform: translateY(0px) rotate(0deg);
+    }
 
-  100% {
-    transform: translateY(0px) rotate(0deg);
-  }
+    100% {
+        transform: translateY(0px) rotate(0deg);
+    }
 
 }
 
 .notification .symbol {
-  position: absolute;
-  top: 50%;
-  left: 0.25em;
-  transform: translateY(-50%);
-  font-size: 2.5em;
+    position: absolute;
+    top: 50%;
+    left: 0.25em;
+    transform: translateY(-50%);
+    font-size: 2.5em;
 }
 
 .notification p {
-  position: relative;
-  width: 100%;
-  height: auto;
-  max-height: 4em;
-  float: right;
-  margin: 0.5em 0;
-  font-size: 1em;
-  padding-left: 4em;
-  padding-right: 2em;
-  transition: 0.2s ease;
-  transition-delay: 0s;
-  line-height: 1.3;
-  opacity: 0;
-  overflow-y: auto;
+    position: relative;
+    width: 100%;
+    height: auto;
+    max-height: 4em;
+    float: right;
+    margin: 0.5em 0;
+    font-size: 1em;
+    padding-left: 4em;
+    padding-right: 2em;
+    transition: 0.2s ease;
+    transition-delay: 0s;
+    line-height: 1.3;
+    opacity: 0;
+    overflow-y: auto;
+}
+
+.notification.success p,
+.notification.success:hover p,
+.notification.error p,
+.notification.error:hover p {
+    opacity: 0;
+    transition-delay: 0s;
 }
 
 .notification:hover p,
 .success.visible p,
-.error.visible p {
-  opacity: 1;
-  transition-delay: 1.25s;
+.success.visible:hover p,
+.error.visible p,
+.error.visible:hover p {
+    opacity: 1;
+    transition-delay: 1.25s;
 }
 
 .notification .close {
-  position: absolute;
-  font-size: 1.5rem;
-  font-weight: bold;
-  right: 0.5rem;
-  top: 0.5rem;
-  color: var(--theme-color-1);
-  text-align: center;
-  transition: color 0.2s ease, opacity 0.2s ease 0s;
-  cursor: pointer;
-  transition-delay: 0s;
-  visibility: hidden;
-  opacity: 0;
+    position: absolute;
+    font-size: 1.5rem;
+    font-weight: bold;
+    right: 0.5rem;
+    top: 0.5rem;
+    color: var(--theme-color-1);
+    text-align: center;
+    transition: color 0.2s ease, opacity 0.2s ease 0s;
+    cursor: pointer;
+    transition-delay: 0s;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .notification .close:before {
-  content: '';
-  width: 1.1em;
-  height: 1.1em;
-  border-radius: 50%;
-  background-color: var(--theme-color-1);
-  position: absolute;
-  top: -0.05em;
-  left: -0.05em;
-  z-index: -1;
-  transition: 0.2s ease;
-  opacity: 0;
-  transition-delay: 0s;
+    content: '';
+    width: 1.1em;
+    height: 1.1em;
+    border-radius: 50%;
+    background-color: var(--theme-color-1);
+    position: absolute;
+    top: -0.05em;
+    left: -0.05em;
+    z-index: -1;
+    transition: 0.2s ease;
+    opacity: 0;
+    transition-delay: 0s;
 }
 
 .notification .close:hover {
-  color: var(--accent-color-1-dark);
-  transition-delay: 0s;
+    transition-delay: 0s;
 }
 
 .notification .close:hover:before {
-  opacity: 1;
-  transition-delay: 0s;
+    opacity: 1;
+    transition-delay: 0s;
 }
 
 .notification:hover .close,
 .error.visible .close,
 .success.visible .close {
-  visibility: visible;
-  opacity: 0.9;
-  transition: color 0.2s ease, opacity 0.2s ease 1.25s;
+    visibility: visible;
+    opacity: 0.9;
+    transition: color 0.2s ease, opacity 0.2s ease 1.25s;
 }
 
 
 /*
 /-------------------------------------------------------------------
 /
-/ Alternative accentual styles:
+/ Notification Styles:
 /
 /-------------------------------------------------------------------
 */
 
+.notification {
+    border: 1px solid var(--accent-color-1-dark);
+    background: rgba(61, 118, 225, 0.7);
+    box-shadow: 2px 2px 10px 3px black, 0 0 12px 1px var(--accent-color-1-dark) inset;
+}
+
+.darkmode .notification {
+    background: rgba(61, 118, 225, 0.4);
+}
+
+.notification .close:hover {
+    color: var(--accent-color-1-dark);
+}
 
 .notification.error {
-  border: 1px solid var(--accent-color-2-dark);
-  background: rgba(178, 58, 72, 0.7);
-  box-shadow: 2px 2px 10px 3px black, 0 0 12px 1px var(--accent-color-2-dark) inset;
+    border: 1px solid var(--accent-color-2-dark);
+    background: rgba(178, 58, 72, 0.7);
+    box-shadow: 2px 2px 10px 3px black, 0 0 12px 1px var(--accent-color-2-dark) inset;
 }
 
 .darkmode .notification.error {
-  background: rgba(178, 58, 72, 0.4);
-}
-
-.notification.visible.error {
-  height: 5em;
-  width: calc(100% - 4rem);
+    background: rgba(178, 58, 72, 0.4);
 }
 
 .notification.visible.error:hover {
-  background: rgba(178, 58, 72, 0.8);
+    background: rgba(178, 58, 72, 0.8);
 }
 
 .darkmode .notification.visible.error:hover {
-  background: rgba(178, 58, 72, 0.6);
+    background: rgba(178, 58, 72, 0.6);
+}
+
+.notification.error .close:hover {
+    color: var(--accent-color-2-dark);
 }
 
 .notification.success {
-  border: 1px solid var(--accent-color-3-dark);
-  background: rgba(32, 191, 85, 0.7);
-  box-shadow: 2px 2px 10px 3px black, 0 0 12px 1px var(--accent-color-3-dark) inset;
+    border: 1px solid var(--accent-color-3-dark);
+    background: rgba(32, 191, 85, 0.7);
+    box-shadow: 2px 2px 10px 3px black, 0 0 12px 1px var(--accent-color-3-dark) inset;
 }
 
 .darkmode .notification.success {
-  background: rgba(32, 191, 85, 0.4);
-}
-
-.notification.visible.success {
-  height: 5em;
-  width: calc(100% - 4rem);
+    background: rgba(32, 191, 85, 0.4);
 }
 
 .notification.visible.success:hover {
-  background: rgba(32, 191, 85, 0.8);
+    background: rgba(32, 191, 85, 0.8);
 }
 
 .darkmode .notification.visible.success:hover {
-  background: rgba(32, 191, 85, 0.6);
+    background: rgba(32, 191, 85, 0.6);
+}
+
+.notification.success .close:hover {
+    color: var(--accent-color-3-dark);
 }
 
 
 .notification.warning .symbol {
-  color: var(--accent-color-5-dark);
+    color: var(--accent-color-5-dark);
 }
 
 .darkmode .notification.warning .symbol {
-  color: var(--accent-color-5-light);
+    color: var(--accent-color-5-light);
 }
 
 .notification.error .symbol {
-  color: var(--accent-color-2-light);
+    color: var(--accent-color-2-light);
 }
 
 .notification.success .symbol {
-  color: var(--accent-color-3-light);
+    color: var(--accent-color-3-light);
 }
 
 
@@ -5494,22 +5517,21 @@ nav.nav .image-container img {
 
 @media only screen and (min-width: 992px) {
 
-  .notification.visible:hover {
-    width: calc(50% - 2em);
-  }
+    .notification.visible:hover {
+        width: 900px;
+    }
 
-  .notification.error,
-  .notification.error:hover,
-  .notification.success,
-  .notification.success {
-    width: calc(50% - 2em);
-  }
+    .notification.visible.error,
+    .notification.visible.error:hover,
+    .notification.visible.success,
+    .notification.visible.success:hover {
+        height: 5em;
+        width: calc(50% - 2em);
+    }
 }
 
 @media only screen and (min-width: 1200px) {
-  .notification.visible:hover {
-    width: 900px;
-  }
+
 }
 
 /*
