--- a/sv-tora/public/css/app.css
+++ b/sv-tora/public/css/app.css
@@ -767,6 +767,18 @@ a.go-back i {
     padding: 0.5rem;
 }
 
+.success {
+    border: 1px solid var(--success-light);
+    background: rgba(32, 191, 85, 0.8);
+    padding: 1em;
+}
+
+.error {
+    border: 1px solid var(--error-light);
+    background: rgba(178, 58, 72, 0.8);
+    padding: 1em;
+}
+
 
 /*
 /-------------------------------------------------------------------
@@ -2828,14 +2840,14 @@ header .profile {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.4);
   -webkit-backdrop-filter: blur(3px);
           backdrop-filter: blur(3px);
   z-index: 10000;
 }
 
 .darkmode .loader-container {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .small-loader-container {
