--- a/sv-tora/public/css/sites/profile-settings.css
+++ b/sv-tora/public/css/sites/profile-settings.css
@@ -2,19 +2,19 @@ main h1 {
     margin-bottom: 1.5rem;
 }
 
-main .col {
-    width: 100%;
-    margin: 0;
-    float: left;
+.setting {
+    margin-bottom: 2rem;
 }
 
-.switch-container {
-    margin-bottom: 4em;
+.switch-container .switch {
+    position: relative;
+    display: block;
 }
 
 .switch-container .text {
+    font-size: 2rem;
     font-weight: bold;
-    top: 1.5em;
+    top: 0;
     left: 0;
     margin-left: unset;
     cursor: pointer;
@@ -23,38 +23,16 @@ main .col {
 main h3 {
     font-size: 2rem;
     margin-bottom: 0.5rem;
-}
-
-.col h3 {
     margin-top: 0;
 }
 
-.col .pic-container {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    margin-top: 0.5em;
-    right: 0;
-    max-width: 15em;
-    width: 40%;
-    min-width: 3em;
-    height: auto;
-    border-radius: 50%;
-    box-shadow: 2px 2px 10px 5px var(--box-shadow);
-    overflow: hidden;
-    transition: 0.2s ease;
+p {
+    margin: 0 0 0.25rem;
 }
 
-.col .pic-container:hover {
-    box-shadow: 2px 2px 20px 10px var(--box-shadow);
-    transform: scale(1.1);
-}
-
-.col .pic-container img {
-    width: 100%;
-    height: auto;
-    border-radius: 50%;
-    transform: scale(1.06);
+p,
+a {
+    font-size: 1.25rem;
 }
 
 @media only screen and (min-width: 600px) {
@@ -62,18 +40,6 @@ main h3 {
 }
 
 @media only screen and (min-width: 768px) {
-    main .col {
-        width: 50%;
-    }
-
-    main .col:nth-of-type(2) {
-        text-align: right;
-    }
-
-    .col .pic-container {
-        width: 50%;
-        display: inline-block;
-    }
 }
 
 @media only screen and (min-width: 992px) {
