--- a/sv-tora/resources/css/components/nav.css
+++ b/sv-tora/resources/css/components/nav.css
@@ -41,23 +41,13 @@ nav.nav {
     visibility: hidden;
     opacity: 0;
     background:
-        radial-gradient(white 15%, transparent 16%) 0 0,
-        radial-gradient(white 15%, transparent 16%) 10px 10px,
-        radial-gradient(rgba(0,0,0,.1) 15%, transparent 20%) 0 1px,
-        radial-gradient(rgba(0,0,0,.1) 15%, transparent 20%) 10px 11px;
-    background-color: rgba(225, 225, 225, 0.9);
-    background-size: 20px 20px;
-    backdrop-filter: blur(5px);
-}
-
-.darkmode nav.nav {
-    background:
         radial-gradient(black 15%, transparent 16%) 0 0,
         radial-gradient(black 15%, transparent 16%) 10px 10px,
         radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
         radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 10px 11px;
     background-color: rgba(30, 30, 30, 0.9);
     background-size: 20px 20px;
+    backdrop-filter: blur(5px);
 }
 
 nav.nav.open {
@@ -113,7 +103,7 @@ nav.nav ul a {
     position: relative;
     display: block;
     text-decoration: none;
-    color: var(--text-color);
+    color: white;
     font-size: 3rem;
     width: 100%;
     height: 100%;
