--- a/sv-tora/resources/css/components/table.css
+++ b/sv-tora/resources/css/components/table.css
@@ -177,6 +177,10 @@ h2.table-heading {
     font-size: 0.5em;
 }
 
+.table td .error {
+    padding: 0;
+}
+
 @media only screen and (min-width: 600px) {
 
 }
