--- a/sv-tora/resources/css/general-style.css
+++ b/sv-tora/resources/css/general-style.css
@@ -19,6 +19,18 @@ body {
     --theme-color-4: #9D9D9D;
     --theme-color-5: #4D4D4D;
 
+    --theme-color-1-light: #E5E5E5;
+    --theme-color-2-light: #FFFFFF;
+    --theme-color-3-light: #C8C8C8;
+    --theme-color-4-light: #9D9D9D;
+    --theme-color-5-light: #4D4D4D;
+
+    --theme-color-1-dark: #171717;
+    --theme-color-2-dark: #222222;
+    --theme-color-3-dark: #303030;
+    --theme-color-4-dark: #4a4a4a;
+    --theme-color-5-dark: #9b9b9b;
+
     --disabled-light: #A0A0A0;
     --disabled-dark: #727272;
 
@@ -108,7 +120,7 @@ body.darkmode:before {
 }
 
 main {
-    padding: 7.5rem 1.5rem 7rem;
+    padding: 7.5rem 1.5rem 7rem 3rem;
     position: relative;
     width: 100%;
     height: 100%;
@@ -365,7 +377,7 @@ a.go-back i {
     }
 
     main {
-        padding: 7.5rem 2rem 7rem;
+        padding: 7.5rem 2rem 7rem 4rem;
     }
 
     .oversize-container {
